# WebScraping

./: authors_hw9.json  authors_hw9_add.json  connect.py  consumer.py  models.py  producer.py  pyproject.toml  quotes_hw9.json  quotes_hw9_add.json  scrap_to_json.py  scrapy_framework.py  search_in_db.py  seeds.py
test_spyder/: config.ini  result.json
test_spyder/test_spyder/: settings.py
test_spyder/test_spyder/spiders/: quotes.py
